Bug 26511 - PR18115 + PR11353 + PR26296 = build error
Summary: PR18115 + PR11353 + PR26296 = build error
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Frank Ch. Eigler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-20 17:20 UTC by Frank Ch. Eigler
Modified: 2020-08-20 17:25 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2020-08-20 17:20:25 UTC
The three subject PRs collude to make scripts fail in -p4 with a lock-related errors.  These come from the synthetic probe begin {} emitted for initializing probe conditional expressions/flags, that looks empty and elision-worthy.  But if not elided after all, due to a typo, it made references to the stp_probe_locks structure.
Comment 1 Frank Ch. Eigler 2020-08-20 17:25:05 UTC
commit 972244e97dd7