PR26511: fix probe-condition synthetic begin{} probe compilability

Fix two bugs:

1) In semantic_pass_optimize1, preserve synthetic probes even with
   empty bodies, which would normally be elided.  This allows
   probe-conditions to be more properly initialized, and
   initially-false probes to be disarmed early.

2) In c_unparser::emit_probe(), call emit_lock() based on the
   needs_global_locks() lockworthiness of the proper probe (the
   derived_probe being translated, rather than the other derived_probe
   whose conditions are being evaluated)

This lets the new lock-pushdown.* tests work with or without -u (now
tested).